# fastapi_cloud_healthcheck_azure_vm

./: LICENSE  README.md  pyproject.toml
fastapi_cloud_healthcheck_azure_vm/: __init__.py  service.py
